# routes/index.js
@@ -2,7 +2,6 @@ const express = require("express");
 const router = express.Router();
 
 const {
-  createExport,
   getExportStatus,
   downloadExport,
   downloadLandingPage,
@@ -10,7 +9,6 @@ const {
 } = require("./exports.controller");
 
 
-router.post("/exportV1", createExport);
 router.post("/export/:id", createExportV2);
 router.get("/exportRecord/:id", getExportStatus);
 router.get("/download-page/:id", downloadLandingPage);
